--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -12,51 +12,43 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Create Pull Request
-        id: create_pr
+      - name: Generate JWT and Create Pull Request
         run: |
-          # Install Node.js and dependencies
-          sudo apt-get install -y nodejs npm
-          npm install @octokit/app @octokit/core
+          # Install jq for JSON parsing
+          sudo apt-get install -y jq
 
-          # Create a Node.js script to handle PR creation
-          echo "const { App } = require('@octokit/app');
-          const { Octokit } = require('@octokit/core');
-          
-          async function createPullRequest() {
-            const appId = process.env.APP_ID;
-            const privateKey = process.env.PRIVATE_KEY;
-            const installationId = process.env.INSTALLATION_ID;
-            
-            // Authenticate as the GitHub App
-            const app = new App({ appId, privateKey });
-            const installationAccessToken = await app.getInstallationAccessToken({ installationId });
-            
-            const octokit = new Octokit({ auth: installationAccessToken });
-            
-            // Create a pull request
-            try {
-              const response = await octokit.request('POST /repos/{owner}/{repo}/pulls', {
-                owner: 'MerihanAhmedM',
-                repo: 'gold',
-                title: 'Automated PR from common-workflows',
-                head: 'pr-branch',
-                base: 'main',
-                body: 'This is an automated PR created by a workflow.'
-              });
-              
-              console.log('Pull request created successfully:', response.data.html_url);
-            } catch (error) {
-              console.error('Error creating pull request:', error.message);
-              process.exit(1);
-            }
-          }
-          
-          createPullRequest();" > create-pr.js
+          # Generate a JWT
+          JWT=$(python -c "
+import jwt
+import time
 
-          # Run the Node.js script
-          node create-pr.js
-        env:
-          APP_ID: ${{ secrets.APP_ID }}
-          PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
-          INSTALLATION_ID: ${{ secrets.INSTALLATION_ID }}
+# Load private key
+private_key = '''${{ secrets.PRIVATE_KEY }}'''
+
+# Generate JWT
+payload = {
+    'iat': int(time.time()),
+    'exp': int(time.time()) + 600,
+    'iss': '${{ secrets.APP_ID }}'
+}
+
+token = jwt.encode(payload, private_key, algorithm='RS256')
+print(token.decode('utf-8'))
+")
+
+          # Get an installation access token
+          ACCESS_TOKEN=$(curl -X POST https://api.github.com/app/installations/${{ secrets.INSTALLATION_ID }}/access_tokens \
+            -H "Authorization: Bearer $JWT" \
+            -H "Accept: application/vnd.github.machine-man-preview+json" \
+            | jq -r .token)
+
+          # Create a pull request
+          curl -X POST https://api.github.com/repos/MerihanAhmedM/gold/pulls \
+            -H "Authorization: token $ACCESS_TOKEN" \
+            -H "Accept: application/vnd.github.v3+json" \
+            -d '{
+              "title": "Automated PR from common-workflows",
+              "head": "pr-branch",
+              "base": "main",
+              "body": "This is an automated PR created by a workflow."
+            }'
