--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -19,7 +19,7 @@ jobs:
         id: app-token
         with:
           app-id: ${{vars.APP_ID}}
-          private-key: ${{ secrets.PRIVATE-KEY}}
+          private-key: ${{ secrets.PRIVATE_KEY}}
           installation-id: ${{vars.INSTALLATION_ID}}
       - name: create pull req
         uses:  peter-evans/create-pull-request@v4
