--- a/.github/workflows/Workme.yml
+++ b/.github/workflows/Workme.yml
@@ -9,24 +9,23 @@ jobs:
   create-pr:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with: 
-           node-version: '16'
-           
-      - name: Create GitHub App Token
-        uses: actions/create-github-app-token@v1
-        id: app-token
-        with:
-          app-id: ${{ secrets.APP_ID }}  # Ensure APP_ID is set correctly in your secrets
+    
+    - name: Checkout code from common-workflows
+      uses: actions/checkout@v3  
+
+    - name: Create GitHub App Token
+      id: get_workflow_token
+      uses: peter-murray/workflow-application-token-action@v3
+      with:   
+          app-id: ${{ vars.APP_ID }}  # Ensure APP_ID is set correctly in your secrets
           private-key: ${{ secrets.PRIVATE_KEY }}  # Ensure PRIVATE_KEY is set correctly in your secrets
           owner: MerihanAhmedM  # Replace with your GitHub username or organization
           repositories: '["MerihanAhmedM/gold"]'  # List of repositories if needed
           skip-token-revoke: true  # Optional, depends on your needs
 
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v4
-        with:
+    - name: Create Pull Request
+      uses: peter-evans/create-pull-request@v4
+      with:
           token: ${{ steps.app-token.outputs.token }}
           repository: MerihanAhmedM/gold
           title: My Pull Request
