--- a/.github/workflows/Workme.yml
+++ b/.github/workflows/Workme.yml
@@ -17,8 +17,8 @@ jobs:
       id: get_workflow_token
       uses: peter-murray/workflow-application-token-action@v3
       with:   
-          app-id: ${{ vars.APP_ID }}  # Ensure APP_ID is set correctly in your secrets
-          private-key: ${{ secrets.PRIVATE_KEY }}  # Ensure PRIVATE_KEY is set correctly in your secrets
+          application_id: ${{ vars.APP_ID }}  # Ensure APP_ID is set correctly in your secrets
+          application_private_key: ${{ secrets.PRIVATE_KEY }}  # Ensure PRIVATE_KEY is set correctly in your secrets
           owner: MerihanAhmedM  # Replace with your GitHub username or organization
           repositories: '["MerihanAhmedM/gold"]'  # List of repositories if needed
           skip-token-revoke: true  # Optional, depends on your needs
