--- a/.github/workflows/Workme.yml
+++ b/.github/workflows/Workme.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Create Pull Request
       uses: peter-evans/create-pull-request@v4
       with:
-          token: ${{ steps.app-token.outputs.token }}
+          token: ${{ steps.get_workflow_token.outputs.token }}
           repository: MerihanAhmedM/gold
           title: My Pull Request
           body: This is a pull request created by GitHub Actions
